<resources>
    <string name="app_name">Bakuposter</string>
    <string name="banner_ad_unit_id">ca-app-pub-xxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="facebookID" translatable="false">xxxxxxxxxxxxxxx</string>

    <string name="main_menu">Main Menu</string>
    <string name="exit">Exit</string>

    <string name="log_in">LogIn</string>
    //menu
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="about">About</string>


    //language
    <string name="btnEn">English</string>
    <string name="btnAz">Azerbaijan</string>
    <string name="btnRu">Russian</string>

    //tabmenu
    <string name="Movies">Movies</string>
    <string name="Concerts">Concerts</string>
    <string name="Theater">Theatre</string>
    <string-array name="tabArrays">
        <item>@string/Movies</item>
        <item>@string/Concerts</item>
        <item>@string/Theater</item>
    </string-array>

    <string name="pref_about_summary">Amuse Application             All right reserved by Rashad Javadov</string>
    <string name="website">WebSite www.bakuposter.com</string>
    <string name="btnSearch">Search</string>

    <string name="btn_skip_intro">Skip Intro</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    //menu
    <string name="category_view">Category</string>
    <string name="key_search">Keyword</string>
    <string name="hind_key_search">Please input keyword</string>
    <string name="start_date">Start Date</string>
    <string name="start_date_hint">Select start date</string>
    <string name="end_date">End Date</string>
    <string name="end_date_hint">Select Date</string>
    <string name="search_btn">Search</string>





    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
</resources>
